# AuctionScrape

./: .gitignore  AGENTS.md  ProcureWatch_PRD_and_Implementation_Blueprint_v1_2.md  README.md  alberta_test_output.html  alembic.ini  main.py  pyproject.toml
configs/: app.yaml
configs/portals/: alberta_purchasing.yaml  clarkcounty_nv.yaml  nevadaepro.yaml  test_portal.yaml
data/: procurewatch.db
data/cookies/: alberta_purchasing.json
src/procurewatch/: __init__.py
src/procurewatch/cli/: __init__.py  main.py
src/procurewatch/cli/commands/: __init__.py  db.py  opportunities.py  portal.py  quick.py  schedule.py  scrape.py
src/procurewatch/core/: logging.py
src/procurewatch/core/backends/: __init__.py  base.py  crawl4ai_backend.py  http_backend.py  playwright_backend.py
src/procurewatch/core/config/: __init__.py  loader.py  models.py  synonyms.py
src/procurewatch/core/extract/: __init__.py  base.py  heuristic_card.py  heuristic_table.py  pipeline.py  rules.py  structured.py
src/procurewatch/core/fetch/: __init__.py  retries.py  throttling.py
src/procurewatch/core/normalize/: __init__.py  canonical.py  diff.py  parsing.py
src/procurewatch/core/orchestrator/: __init__.py  runner.py
src/procurewatch/core/portals/: __init__.py  base.py  generic_table.py  search_form.py
src/procurewatch/core/scheduler/: __init__.py  locks.py  service.py
src/procurewatch/persistence/: __init__.py  db.py  models.py  repo.py
src/procurewatch/persistence/migrations/: env.py  script.py.mako
src/procurewatch/persistence/migrations/versions/: 001_initial_schema.py
tests/: __init__.py
