[project]
name = "procurewatch"
version = "0.1.0"
description = "A terminal-first procurement/tender scraper with scheduling, versioning, and multi-backend support"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "ProcureWatch Team" }
]
keywords = ["scraper", "procurement", "tender", "cli", "scheduler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
    # CLI/TUI
    "typer>=0.12.0",
    "rich>=13.7.0",
    # HTTP/Parsing
    "httpx>=0.27.0",
    "lxml>=5.1.0",
    "beautifulsoup4>=4.12.0",
    "selectolax>=0.3.21",
    "orjson>=3.10.0",
    # Browser automation
    "playwright>=1.45.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",
    # Resilience/Scheduling
    "tenacity>=8.3.0",
    "apscheduler>=3.10.0",
    # Configuration
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.1",
    # Utilities
    "python-dateutil>=2.9.0",
    "thefuzz>=0.22.0",  # Fuzzy string matching for header synonyms
    "dateparser>=1.2.2",
    "cssselect>=1.4.0",
]

[project.optional-dependencies]
# Crawl4AI backend (heavier dependency, optional)
crawl4ai = [
    "crawl4ai>=0.4.0",
]

# PostgreSQL support
postgres = [
    "psycopg[binary]>=3.1.0",
    "asyncpg>=0.29.0",
]

# Full TUI with Textual
tui = [
    "textual>=0.70.0",
]

# Development dependencies
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

# All optional features
all = [
    "procurewatch[crawl4ai,postgres,tui,dev]",
]

[project.scripts]
procurewatch = "procurewatch.cli.main:app"
pw = "procurewatch.cli.main:app"

[project.urls]
Homepage = "https://github.com/procurewatch/procurewatch"
Documentation = "https://github.com/procurewatch/procurewatch#readme"
Repository = "https://github.com/procurewatch/procurewatch"
Issues = "https://github.com/procurewatch/procurewatch/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/procurewatch"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict
]

[tool.ruff.lint.isort]
known-first-party = ["procurewatch"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "lxml.*",
    "selectolax.*",
    "apscheduler.*",
    "crawl4ai.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/procurewatch"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
